--- a/src/index.html
+++ b/src/index.html
@@ -21,16 +21,20 @@
         <h2>Loan details</h2>
         <form action="#" method="post">
             <div class="form-group">
-                <label for="Loan duration">Loan duration (months)</label>
-                <input type="loanDuration" id="loanDuration" name="loanDuration" required>
+                <label for="Total price">Total price ($)</label>
+                <input type="number" id="totalPrice" name="totalPrice" placeholder="25000" required>
             </div>
             <div class="form-group">
-                <label for="APY">APY (%)</label>
-                <input type="APY" id="APY" name="APY" required>
+                <label for="Loan duration">Loan duration (months)</label>
+                <input type="number" id="loanDuration" name="loanDuration" placeholder="36" required>
+            </div>
+            <div class="form-group">
+                <label for="Interest rate">Interest rate (%)</label>
+                <input type="number" step="0.1" id="interest" name="interest" placeholder="4.5" required>
             </div>
             <div class="form-group">
                 <label for="Down payment">Down payment ($)</label>
-                <input type="downPayment" id="downPayment" name="downPayment" required>
+                <input type="number" id="downPayment" name="downPayment" placeholder="0">
             </div>
             <div class="form-group">
                 <button type="button">Calculate</button>
