--- a/src/index.html
+++ b/src/index.html
@@ -17,30 +17,41 @@
     </p1>
     <br>
 
-    <div class="container">
-        <h2>Loan details</h2>
-        <form action="#" method="post">
-            <div class="form-group">
-                <label for="Total price">Total price ($)</label>
-                <input type="number" id="totalPrice" name="totalPrice" placeholder="25000" required>
-            </div>
-            <div class="form-group">
-                <label for="Loan duration">Loan duration (months)</label>
-                <input type="number" id="loanDuration" name="loanDuration" placeholder="36" required>
-            </div>
-            <div class="form-group">
-                <label for="Interest rate">Interest rate (%)</label>
-                <input type="number" step="0.1" id="interest" name="interest" placeholder="4.5" required>
-            </div>
-            <div class="form-group">
-                <label for="Down payment">Down payment ($)</label>
-                <input type="number" id="downPayment" name="downPayment" placeholder="0">
-            </div>
-            <div class="form-group">
-                <button type="button">Calculate</button>
-            </div>
-        </form>
-
+    <div class="calculation_container">
+        
+        <div class="input_container">
+            <h2>Loan details</h2>
+            <form action="#" method="post">
+                <div class="form-group">
+                    <label for="Total price">Total price ($)</label>
+                    <input type="number" id="totalPrice" name="totalPrice" placeholder="25000" required>
+                </div>
+                <div class="form-group">
+                    <label for="Loan duration">Loan duration (months)</label>
+                    <input type="number" id="loanDuration" name="loanDuration" placeholder="36" required>
+                </div>
+                <div class="form-group">
+                    <label for="Interest rate">Interest rate (%)</label>
+                    <input type="number" step="0.1" id="interest" name="interest" placeholder="4.5" required>
+                </div>
+                <div class="form-group">
+                    <label for="Down payment">Down payment ($)</label>
+                    <input type="number" id="downPayment" name="downPayment" placeholder="0">
+                </div>
+                <div class="form-group">
+                    <button type="button">Calculate</button>
+                </div>
+            </form>
+        </div>
+    
+        <div class="output_container">
+            <h2>Monthly payments</h2>
+            <h4>Down payment: </h4>
+            <h4>Loaned amount: </h4>
+            <h4>Total interest amount: </h4>
+            <h4>Total paid amount: </h4>
+        </div>
     </div>
+
 </body>
 </html>
