--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -23,19 +23,19 @@
             <h2>Loan details</h2>
             <form action="#" method="post">
                 <div class="form-group">
-                    <label for="Total price">Total price ($)</label>
+                    <label for="totalPrice">Total price ($)</label>
                     <input type="number" id="totalPrice" name="totalPrice" placeholder="25000" required>
                 </div>
                 <div class="form-group">
-                    <label for="Loan duration">Loan duration (months)</label>
+                    <label for="loanDuration">Loan duration (months)</label>
                     <input type="number" id="loanDuration" name="loanDuration" placeholder="36" required>
                 </div>
                 <div class="form-group">
-                    <label for="Interest rate">Interest rate (%)</label>
+                    <label for="interest">Interest rate (%)</label>
                     <input type="number" step="0.1" id="interest" name="interest" placeholder="4.5" required>
                 </div>
                 <div class="form-group">
-                    <label for="Down payment">Down payment ($)</label>
+                    <label for="downPayment">Down payment ($)</label>
                     <input type="number" id="downPayment" name="downPayment" placeholder="0">
                 </div>
                 <div class="form-group">
